--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -1,20 +1,90 @@
-header {
+body {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 22px;
+    color: seashell;
     background-color: black;
-    color: white;
+    text-align: center;
+    box-sizing: border-box;
 }
+
+header img {
+    height: 50px;
+    margin-left: 10px;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 69px;
+    width: 100%;
+    top: 0;
+    position: fixed;
+    border-bottom: 1px solid seashell;
+    z-index: 1;
+    background-color: black;
+    opacity: 0.9;
+}
+
+/*NOTE the fixed position will keep the header in place. You need to give it a 
+z-index of 1 so it goes over the other content. Then you need to make sure the lower content
+doesn't get blocked right off the bat by setting its margins to accomodate the header */
+
+a {
+    text-decoration: underline;
+    color: seashell;
+    margin: 10px;
+}
+
 
 main {
     background-image: url("./img-mission-background.jpeg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
     height: 700px;
-    width: 1200px;
+}
+
+.container {
+    margin-top: 69px;
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
-div {
+.mission {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1200px;
     background-color: black;
-    color: white;
+    flex-wrap: wrap;
+}
+
+.mission h2,
+.mission h4 {
+    margin: 10px auto;
+    padding: 0px;
+}
+
+.featured-tea {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px auto;
+}
+
+.featured-tea-headers {
+    line-height: 1;
+    width: 1000px;
+}
+
+.featured-tea-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .featured-tea img {
@@ -22,8 +92,53 @@ div {
     width: 300px;
 }
 
+figcaption {
+    font-weight: bold;
+    margin: 10px;
+}
+
 .locations {
     background-image: url(./img-locations-background.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
     height: 500px;
-    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.locations h2 {
+    background-color: transparent;
+}
+
+.locations-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.location {
+    width: 300px;
+    margin: 15px 20px;
+    background-color: black;
+    margin: 15px 20px;
+}
+
+.location p {
+    line-height: 2.0;
+}
+
+.copyright {
+    text-align: left;
+    margin: 20px;
+}
+
+.contact {
+    height: 200px;
+}
+
+.contact h2 {
+    margin-bottom: 50px;
 }
